# AgenticExperiments

./: .gitignore  NOTES.md  exc_test.py  generic_pydantic.py  generic_tests_with_pydantic.py  langgraph_heterogeneous_state.py  langgraph_interrupt_test.py  langgraph_quirks.py  langgraph_send.py  pydantic_experiment_1.py  pydantic_make_optional.py  pydantic_root_model.py  pydantic_test.py  pydantic_top_level_unions.py  pyproject.toml  python_match.py  silly_test.py  type_experiment.py
